<resources>
    <string name="app_name" color="#ecf0f1">PitStop</string>
    <string name="title_activity_main_food_truck_user">MainFoodTruckUserActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_truck">Trucks</string>
    <string name="action_order">Order</string>
    <string name="action_logout">Logout</string>
    <string name="action_queue">Queue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mainpage">MainPage</string>
</resources>
