<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Profile", should appear as action button if possible -->
    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        app:showAsAction="ifRoom"/>

    <!-- Trucks, should always be in the overflow -->
    <item android:id="@+id/action_truck"
        android:title="@string/action_truck"
        app:showAsAction="ifRoom"/>

    <!-- Trucks, should always be in the overflow -->
    <item android:id="@+id/action_order"
        android:title="@string/action_order"
        app:showAsAction="ifRoom"/>

    <!-- Trucks, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

</menu>