<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Profile", should appear as action button if possible -->
    <item
        android:id="@+id/action_profile"
        android:icon = "@drawable/user"
        android:title="@string/action_profile"
        app:showAsAction="ifRoom"/>

    <!-- Trucks, should always be in the overflow -->
    <item android:id="@+id/action_queue"
        android:icon = "@drawable/line"
        android:title="@string/action_queue"
        app:showAsAction="ifRoom"/>

    <!-- Trucks, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

</menu>